[workspace]
members = ["leptos-fetch", "examples/*"]
resolver = "3"

[workspace.package]
version = "0.4.0-beta"
repository = "https://github.com/zakstucke/leptos-fetch"
license = "MIT"
authors = ["Zak Stucke"]
edition = "2024"
keywords = ["leptos"]
description = "Async query manager for Leptos"
readme = "./leptos-fetch/README.md"
rust-version = "1.85"

[workspace.dependencies]
any_spawner = "0.2"
hydration_context = "0.3"
codee = "0.3"
leptos = "0.8.0-beta" # 0.8.0-alpha

chrono = "0.4"
chrono-humanize = { version = "0.2" }
futures = "0.3"
paste = "1"
parking_lot = "0.12"
send_wrapper = "0.6"
web-sys = { version = "0.3", features = ["DomRect"] }
tracing = "0.1"