[workspace]
members = ["leptos-fetch", "examples/*"]
resolver = "3"

[workspace.package]
version = "0.4.5"
repository = "https://github.com/zakstucke/leptos-fetch"
license = "MIT"
authors = ["Zak Stucke"]
edition = "2024"
keywords = ["leptos"]
description = "Async query manager for Leptos"
readme = "./leptos-fetch/README.md"
rust-version = "1.88"

[workspace.dependencies]
any_spawner = "0.3.0"
hydration_context = "0.3.0"
codee = "0.3"
reactive_graph = "0.2.8"
leptos = "0.8.10"

chrono = "0.4"
chrono-humanize = "0.2"
futures = "0.3"
paste = "1"
parking_lot = "0.12"
pin-project-lite = "0.2"
send_wrapper = "0.6"

# An extraction of the tokio task local into a standalone crate
task-local = "0.1"

web-sys = { version = "0.3", features = ["DomRect"] }
tracing = "0.1"