[package]
name = "leptos-fetch"
version.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
name = "leptos_fetch"
path = "src/lib.rs"

[features]
ssr = ["leptos/ssr"]
# hydrate = ["leptos/hydrate"]
# csr = ["leptos/csr"]

[build-dependencies]
rustc_version = "0.4"

[package.metadata.docs.rs]
# For the features to show in docs.rs, need to tell it to include them:
all-features = true

[dependencies]
chrono.workspace = true
futures.workspace = true
leptos.workspace = true
paste.workspace = true
parking_lot.workspace = true
send_wrapper.workspace = true
serde.workspace = true

[dev-dependencies]
any_spawner = { workspace = true, features = ["tokio"] }
hydration_context.workspace = true
rstest = "0.25"
tokio = { version = "1", features = ["full"] }
parking_lot = {workspace = true, features = ["deadlock_detection"] }
